Pass over macaroons and queue