@@ -48,7 +48,6 @@ import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static gov.cms.dpc.api.auth.MacaroonHelpers.ORGANIZATION_CAVEAT_KEY;
 import static gov.cms.dpc.api.auth.MacaroonHelpers.generateCaveatsForToken;
@@ -321,7 +320,7 @@ public class TokenResource extends AbstractTokenResource {
         final List<MacaroonCaveat> caveats = generateCaveatsForToken(policy.getVersionPolicy().getCurrentVersion(), organizationID, tokenLifetime)
                 .stream()
                 .map(CaveatSupplier::get)
-                .collect(Collectors.toList());
+                .toList();
         return this.bakery.createMacaroon(caveats);
     }
 
@@ -377,7 +376,7 @@ public class TokenResource extends AbstractTokenResource {
                 .getCaveats(macaroon)
                 .stream()
                 .map(MacaroonCaveat::getCondition)
-                .noneMatch(cond -> cond.getKey().equals(ORGANIZATION_CAVEAT_KEY));
+                .noneMatch(cond -> cond.key().equals(ORGANIZATION_CAVEAT_KEY));
 
         if (idMissing) {
             logger.error("GOLDEN MACAROON WAS GENERATED IN TOKEN RESOURCE!");
